# Omni

./: .gitignore  README.md
omni_ws/: .gitignore  README.md  pixi.toml
omni_ws/src/omni_bringup/: CMakeLists.txt  package.xml
omni_ws/src/omni_bringup/launch/: sim_navigation.launch.py  teleop.launch.py
omni_ws/src/omni_description/: CMakeLists.txt  package.xml
omni_ws/src/omni_description/launch/: rsp.launch.py
omni_ws/src/omni_description/rviz/: view_model.rviz
omni_ws/src/omni_description/urdf/: gazebo.xacro  inertial_macros.xacro  omni_bot.urdf.xacro  sensors.xacro
omni_ws/src/omni_gazebo/: CMakeLists.txt  package.xml
omni_ws/src/omni_gazebo/config/: bridge.yaml
omni_ws/src/omni_gazebo/launch/: sim.launch.py
omni_ws/src/omni_gazebo/worlds/: test_world.sdf  test_world.world
omni_ws/src/omni_hardware/: package.xml  setup.cfg  setup.py
omni_ws/src/omni_hardware/launch/: hardware.launch.py
omni_ws/src/omni_hardware/omni_hardware/: arduino_bridge.py  camera_node.py  imu_driver.py
omni_ws/src/omni_navigation/: CMakeLists.txt  package.xml
omni_ws/src/omni_navigation/config/: nav.rviz  nav2_params.yaml
omni_ws/src/omni_navigation/launch/: navigation.launch.py
omni_ws/src/omni_navigation/maps/: test_map.pgm  test_map.yaml
