<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omni_bringup</name>
  <version>0.1.0</version>
  <description>Top-level launch files: full simulation stack and teleop for the omni robot.</description>
  <maintainer email="machirajus7@gmail.com">Machiraju</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>omni_description</exec_depend>
  <exec_depend>omni_gazebo</exec_depend>
  <exec_depend>omni_navigation</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
